# torch_activation

./: .gitignore  .gitmodules  .readthedocs.yml  CITATION.cff  CONTRIBUTION.md  LICENSE  LIST_OF_FUNCTION.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: workflows.yml
docs/: .readthedocs.yml  conf.py  examples.rst  index.rst  installation.rst  modules.rst  requirements.txt  toc.yml  torch_activation.rst
images/activation_images/: plotting.py
test/: curves.py  glus.py  lincomb.py  piece_wise.py  relus.py  trig.py
torch_activation/: __init__.py  composite.py  curves.py  glu_family.py  glus.py  lincomb.py  non_linear.py  piece_wise.py  relu_family.py  relus.py  trig.py  utils.py
